# bio-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ch01_hello_python/: demo.py  exercises.py  lecture.md  solutions.py
ch02_data_types/: demo.py  exercises.py  lecture.md  solutions.py
ch03_control_flow/: demo.py  exercises.py  lecture.md  solutions.py
ch04_functions/: demo.py  exercises.py  lecture.md  solutions.py
ch05_files_and_modules/: demo.py  exercises.py  lecture.md  solutions.py
ch06_numpy/: demo.py  exercises.py  lecture.md  solutions.py
ch07_pandas/: demo.py  exercises.py  lecture.md  solutions.py
ch08_visualization/: demo.py  exercises.py  lecture.md  solutions.py
ch09_ml_intro/: demo.py  exercises.py  lecture.md  solutions.py
ch10_bio_ml_project/: demo.py  exercises.py  lecture.md  solutions.py
