[project]
name = "bio-python-tutorial"
version = "1.0.0"
description = "Python 生物信息学教程：从零基础到机器学习"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
